--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 Hollywood stars reveal in exclusive interviews the Himalayan trick that went viral on TikTok, causing women to reduce their dress sizes almost overnight.
             </p>
             <!-- A placeholder image that fits the theme -->
-            <img src="./assets/img/banner.png" alt="Banner of Pink Salt Trick with Oprah" class="header-image">
+            <img src="/assets/img/banner.png" alt="Banner of Pink Salt Trick with Oprah" class="header-image">
         </header>
 
         <!-- Main Content -->
