--- a/index.html
+++ b/index.html
@@ -83,5 +83,10 @@
             </a>
         </main>
     </div>
+    <script
+  src="https://cdn.utmify.com.br/scripts/utms/latest.js"
+  async
+  defer
+></script>
 </body>
 </html>
