--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link href="./assets/css/style.css" rel="stylesheet">
 </head>
 <body class="bg-pink-100 flex items-center justify-center min-h-screen p-4">
+ <script>
+ window.pixelId = "68605b42c0852194f4df1d0e";
+ var a = document.createElement("script");
+ a.setAttribute("async", "");
+ a.setAttribute("defer", "");
+ a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
+ document.head.appendChild(a);
+ </script>
     <div class="container">
         <!-- Header Section with Title, Subtitle, and Image -->
         <header>
