--- a/memo-pv/index.html
+++ b/memo-pv/index.html
@@ -233,7 +233,7 @@
                   <!-- INICIO DO COMENTARIO -->
                 <div class="perfil"> <span class="nome">
                     <noscript>
-                      <img src="/assets/img/comentarios/m1.jpeg">
+                      <img src="../assets/img/comentarios/m1.jpeg">
                     </noscript>
                     <img class=" ls-is-cached lazyloaded" src="/assets/img/comentarios/m1.jpeg" data-src="/assets/img/comentarios/m1.jpeg">Meredith Fields: </span>
                   <p>I'm so glad I watched this till the end. Super happy!!! Thank you, Dr. Sunjay Gupta. As I got older, I started forgetting things birthdays, where I put my purse and I thought I'd end up old and abandoned in a nursing home. But after trying this recipe, I remember everything now, and my memory is better than when I was 20! God bless you!</p> <span class="infos">Reply · Like · Follow · 3m </span> </div>
