--- a/memo-pv/index.html
+++ b/memo-pv/index.html
@@ -87,13 +87,13 @@
          
 
             <!-- VSL -->
-            <div id="vid_676b547255ea8db1a1f4c665" style="position: relative; width: 100%; padding: 177.77777777777777% 0 0;"> <img id="thumb_676b547255ea8db1a1f4c665" src="https://images.converteai.net/e47d2695-e7da-47cf-a7a5-1f9da5313774/players/676b547255ea8db1a1f4c665/thumbnail.jpg" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; display: block;" alt="thumbnail"> <div id="backdrop_676b547255ea8db1a1f4c665" style=" -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px); position: absolute; top: 0; height: 100%; width: 100%; "></div> </div> <script type="text/javascript" id="scr_676b547255ea8db1a1f4c665"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/e47d2695-e7da-47cf-a7a5-1f9da5313774/players/676b547255ea8db1a1f4c665/player.js", s.async=!0,document.head.appendChild(s); </script> <style> .elementor-element:has(#smartplayer) { width: 100%; } </style>
+           <vturb-smartplayer id="vid-68e723ca53c010a017c6eba5" style="display: block; margin: 0 auto; width: 100%; max-width: 400px;"></vturb-smartplayer> <script type="text/javascript"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/e47d2695-e7da-47cf-a7a5-1f9da5313774/players/68e723ca53c010a017c6eba5/v4/player.js", s.async=!0,document.head.appendChild(s); </script>
             <!-- Velocidade VSL -->   
 
-            <link rel="preload" href="https://scripts.converteai.net/e47d2695-e7da-47cf-a7a5-1f9da5313774/players/676b547255ea8db1a1f4c665/player.js" as="script">
-            <link rel="preload" href="https://scripts.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
-            <link rel="preload" href="https://images.converteai.net/e47d2695-e7da-47cf-a7a5-1f9da5313774/players/676b547255ea8db1a1f4c665/thumbnail.jpg" as="image">
-            <link rel="preload" href="https://cdn.converteai.net/e47d2695-e7da-47cf-a7a5-1f9da5313774/676b4cc2647fbcbaec7437de/main.m3u8" as="fetch">
+            <script>!function(i,n){i._plt=i._plt||(n&&n.timeOrigin?n.timeOrigin+n.now():Date.now())}(window,performance);</script>
+            <link rel="preload" href="https://scripts.converteai.net/e47d2695-e7da-47cf-a7a5-1f9da5313774/players/68e723ca53c010a017c6eba5/v4/player.js" as="script">
+            <link rel="preload" href="https://scripts.converteai.net/lib/js/smartplayer-wc/v4/smartplayer.js" as="script">
+            <link rel="preload" href="https://cdn.converteai.net/e47d2695-e7da-47cf-a7a5-1f9da5313774/68e722b38548c14ca804dcac/main.m3u8" as="fetch">
             <link rel="dns-prefetch" href="https://cdn.converteai.net">
             <link rel="dns-prefetch" href="https://scripts.converteai.net">
             <link rel="dns-prefetch" href="https://images.converteai.net">
